--- a/echo-control/docs/index.mdx
+++ b/echo-control/docs/index.mdx
@@ -40,6 +40,8 @@ function ChatComponent() {
 - **Next.js SDK** — Server-side auth with automatic token management  
 - **TypeScript SDK** — API keys for backends and CLI tools
 
+The React and Next.js SDKs are opinionated wrappers around the TypeScript SDK, providing framework-specific patterns while the TypeScript SDK offers direct API access for maximum flexibility.
+
 <ExampleCards 
   cards={[
     {
