improve react-sdk overview

--- a/echo-control/docs/react-sdk/index.mdx
+++ b/echo-control/docs/react-sdk/index.mdx
@@ -112,10 +112,9 @@ function ChatApp() {
 
 ## Documentation Sections
 
-- **[Authentication](/docs/react-sdk/authentication)** - User authentication, EchoProvider setup, and auth state management
+- **[Provider](/docs/react-sdk/provider)** - EchoProvider setup and configuration
+- **[Components](/docs/react-sdk/components)** - Pre-built UI components for authentication and payments
+- **[Hooks](/docs/react-sdk/hooks)** - Core hooks for authentication, model providers, and platform integration
 - **[LLM Integration](/docs/react-sdk/llm-integration)** - AI SDK integration and direct model access patterns
 - **[Image Generation](/docs/react-sdk/image-generation)** - Generate images using DALL-E with Echo's React SDK
-- **[Components](/docs/react-sdk/components)** - Pre-built UI components for authentication and payments
-- **[Hooks](/docs/react-sdk/hooks)** - Additional hooks for Echo platform integration
-- **[Advanced](/docs/react-sdk/advanced)** - Error handling, token management, and customization patterns
 - **[useChat Hook](/docs/react-sdk/use-chat)** - Advanced chat interfaces with streaming and tool usage
