--- a/echo-control/docs/getting-started/cli.mdx
+++ b/echo-control/docs/getting-started/cli.mdx
@@ -102,7 +102,6 @@ Create CLI tools that generate revenue from AI usage. Echo handles user authenti
         if (balance.balance < 1) {
           const payment = await echo.payments.createPaymentLink({
             amount: 10,
-            description: 'CLI Credits'
           });
           
           console.log('Low balance. Opening payment link...');
@@ -116,6 +115,10 @@ Create CLI tools that generate revenue from AI usage. Echo handles user authenti
         ```sh
         npx tsx cli.ts
         ```
+    </Step>
+
+    <Step>
+        ### Prosper.
     </Step>
 
 </Steps>
