--- a/echo-control/docs/next-sdk/setup.mdx
+++ b/echo-control/docs/next-sdk/setup.mdx
@@ -11,10 +11,10 @@ import { Tabs, Tab } from 'fumadocs-ui/components/tabs';
 ## Installation
 
 <Tabs items={['npm', 'pnpm', 'yarn', 'bun']}>
-  <Tab value="npm">```bash npm install @merit-systems/echo-next-sdk ```</Tab>
-  <Tab value="pnpm">```bash pnpm add @merit-systems/echo-next-sdk ```</Tab>
-  <Tab value="yarn">```bash yarn add @merit-systems/echo-next-sdk ```</Tab>
-  <Tab value="bun">```bash bun add @merit-systems/echo-next-sdk ```</Tab>
+  <Tab value="npm">```bash npm install @merit-systems/echo-next-sdk ai ```</Tab>
+  <Tab value="pnpm">```bash pnpm add @merit-systems/echo-next-sdk ai ```</Tab>
+  <Tab value="yarn">```bash yarn add @merit-systems/echo-next-sdk ai ```</Tab>
+  <Tab value="bun">```bash bun add @merit-systems/echo-next-sdk ai ```</Tab>
 </Tabs>
 
 ### Dependencies
